文字コード指定を直し漏れていたのを修正

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <title>masa - NecoWiki</title>
 
  <link rel="stylesheet" type="text/css" media="screen" href="skin/pukiwiki.css" charset="UTF-8" />
- <link rel="stylesheet" type="text/css" media="print"  href="skin/print.css" charset="Shift_JIS" />
+ <link rel="stylesheet" type="text/css" media="print"  href="skin/print.css" charset="UTF-8" />
 
 </head>
 <body>
